Style wheel for various device widths and add text

--- a/index.html
+++ b/index.html
@@ -3,39 +3,41 @@
   <head>
     <meta charset="utf-8">
     <title>Greatest Gen Drunking Game</title>
+    <link href="https://fonts.googleapis.com/css?family=Audiowide|Lato" rel="stylesheet">
     <link rel="stylesheet" href="/css/spinner.css">
   </head>
   <body>
     <h1>Welcome to the Greatest Gen Drunking Game!</h1>
     <button class="spin-button" type="button" name="spinner">Click To Spin!</button>
+    <img src="/images/arrow.png" alt="arrow">
     <div class="spinner">
       <ul class="pie">
-        <li id="slice-1" class="slice"><div class="slice-contents">Drink Too Much</div></li>
-        <li id="slice-2" class="slice"><div class="slice-contents">Drink the Normal Amount</div></li>
-        <li id="slice-3" class="slice"><div class="slice-contents">Drink the Normal Amount</div></li>
-        <li id="slice-4" class="slice"><div class="slice-contents">Drink the Normal Amount</div></li>
-        <li id="slice-5" class="slice"><div class="slice-contents">Drink the Normal Amount</div></li>
-        <li id="slice-6" class="slice"><div class="slice-contents">Drink the Normal Amount</div></li>
-        <li id="slice-7" class="slice"><div class="slice-contents">Drink the Normal Amount</div></li>
-        <li id="slice-8" class="slice"><div class="slice-contents">Drink the Normal Amount</div></li>
-        <li id="slice-9" class="slice"><div class="slice-contents">Drink the Normal Amount</div></li>
-        <li id="slice-10" class="slice"><div class="slice-contents">Drink the Normal Amount</div></li>
-        <li id="slice-11" class="slice"><div class="slice-contents">Drink the Normal Amount</div></li>
-        <li id="slice-12" class="slice"><div class="slice-contents">Drink the Normal Amount</div></li>
-        <li id="slice-13" class="slice"><div class="slice-contents">Drink the Normal Amount</div></li>
-        <li id="slice-14" class="slice"><div class="slice-contents">Drink the Normal Amount</div></li>
-        <li id="slice-15" class="slice"><div class="slice-contents">Drink the Normal Amount</div></li>
-        <li id="slice-16" class="slice"><div class="slice-contents">Drink the Normal Amount</div></li>
-        <li id="slice-17" class="slice"><div class="slice-contents">Drink the Normal Amount</div></li>
-        <li id="slice-18" class="slice"><div class="slice-contents">Drink the Normal Amount</div></li>
-        <li id="slice-19" class="slice"><div class="slice-contents">Drink the Normal Amount</div></li>
-        <li id="slice-20" class="slice"><div class="slice-contents">Drink the Normal Amount</div></li>
-        <li id="slice-21" class="slice"><div class="slice-contents">Drink the Normal Amount</div></li>
-        <li id="slice-22" class="slice"><div class="slice-contents">Drink the Normal Amount</div></li>
-        <li id="slice-23" class="slice"><div class="slice-contents">Drink the Normal Amount</div></li>
-        <li id="slice-24" class="slice"><div class="slice-contents">Drink the Normal Amount</div></li>
-        <li id="slice-25" class="slice"><div class="slice-contents">Drink the Normal Amount</div></li>
-        <li id="slice-26" class="slice"><div class="slice-contents">Drink the Normal Amount</div></li>
+        <li id="slice-1" class="slice"><div class="slice-contents"><h4>Drink the Normal Amount</h4></div></li>
+        <li id="slice-2" class="slice"><div class="slice-contents"><h4>Drink the Normal Amount</h4></div></li>
+        <li id="slice-3" class="slice"><div class="slice-contents"><h4>Drink the Normal Amount</h4></div></li>
+        <li id="slice-4" class="slice"><div class="slice-contents"><h4>Drink the Normal Amount</h4></div></li>
+        <li id="slice-5" class="slice drink-too-much"><div class="slice-contents"><h4>Drink Too Much</h4></div></li>
+        <li id="slice-6" class="slice"><div class="slice-contents"><h4>Drink the Normal Amount</h4></div></li>
+        <li id="slice-7" class="slice"><div class="slice-contents"><h4>Drink the Normal Amount</h4></div></li>
+        <li id="slice-8" class="slice"><div class="slice-contents"><h4>Drink the Normal Amount</h4></div></li>
+        <li id="slice-9" class="slice"><div class="slice-contents"><h4>Drink the Normal Amount</h4></div></li>
+        <li id="slice-10" class="slice"><div class="slice-contents"><h4>Drink the Normal Amount</h4></div></li>
+        <li id="slice-11" class="slice"><div class="slice-contents"><h4>Drink the Normal Amount</h4></div></li>
+        <li id="slice-12" class="slice"><div class="slice-contents"><h4>Drink the Normal Amount</h4></div></li>
+        <li id="slice-13" class="slice"><div class="slice-contents"><h4>Drink the Normal Amount</h4></div></li>
+        <li id="slice-14" class="slice"><div class="slice-contents"><h4>Drink the Normal Amount</h4></div></li>
+        <li id="slice-15" class="slice"><div class="slice-contents"><h4>Drink the Normal Amount</h4></div></li>
+        <li id="slice-16" class="slice"><div class="slice-contents"><h4>Drink the Normal Amount</h4></div></li>
+        <li id="slice-17" class="slice"><div class="slice-contents"><h4>Drink the Normal Amount</h4></div></li>
+        <li id="slice-18" class="slice"><div class="slice-contents"><h4>Drink the Normal Amount</h4></div></li>
+        <li id="slice-19" class="slice"><div class="slice-contents"><h4>Drink the Normal Amount</h4></div></li>
+        <li id="slice-20" class="slice"><div class="slice-contents"><h4>Drink the Normal Amount</h4></div></li>
+        <li id="slice-21" class="slice"><div class="slice-contents"><h4>Drink the Normal Amount</h4></div></li>
+        <li id="slice-22" class="slice"><div class="slice-contents"><h4>Drink the Normal Amount</h4></div></li>
+        <li id="slice-23" class="slice"><div class="slice-contents"><h4>Drink the Normal Amount</h4></div></li>
+        <li id="slice-24" class="slice"><div class="slice-contents"><h4>Drink the Normal Amount</h4></div></li>
+        <li id="slice-25" class="slice"><div class="slice-contents"><h4>Drink the Normal Amount</h4></div></li>
+        <li id="slice-26" class="slice"><div class="slice-contents"><h4>Drink the Normal Amount</h4></div></li>
       </ul>
     </div>
 
