--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no"/>
     <meta charset="utf-8">
     <title>Greatest Gen Drunking Game</title>
     <link href="https://fonts.googleapis.com/css?family=Audiowide|Lato" rel="stylesheet">
